# ytm-taste

./: .env.example  .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
src/ytm_taste/: concurrency.py  db.py  deezer_client.py  genres.py  google_oauth.py  itunes_client.py  lastfm_client.py  main.py  oauth_device_flow.py  recommendations.py  song_resolver.py  sync.py  youtube_client.py  ytmusic_client.py
tests/: conftest.py  test_concurrency.py  test_db.py  test_deezer_client.py  test_google_oauth.py  test_itunes_client.py  test_lastfm_client.py  test_main.py  test_oauth_device_flow.py  test_recommendations.py  test_song_resolver.py  test_sync.py  test_youtube_client.py  test_ytmusic_client.py
